<resources>
    <string name="app_name">지금 모해?</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="pass_with_notice">비밀번호   (6자 이상)</string>
    <string name="re_password">비밀번호 확인</string>

    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="next">다음</string>
    <string name="duplicate">중복확인</string>

    <string name="logo_img">logo_img</string>

    <string name="name">이름</string>
    <string name="user_code">사용자 고유코드</string>

    <string name="user_name">사용자 이름</string>
    <string name="user_ing">하는 중</string>
    <string name="user_about">한 줄 소개</string>

    <string name="add_friends">친구 추가</string>
    <string name="add_friends_text">친구코드를 입력하세요.</string>

    <string name="ok">확인</string>
    <string name="esc">취소</string>

    <string name="nim"> 님은</string>
    <string name="default_doing">지금모해를 시작하는</string>
    <string name="ing">중...</string>

    <string name="busy">바쁨도</string>
    <string name="busy_1">여유로움</string>
    <string name="busy_2">바쁨</string>
    <string name="busy_3">매우바쁨</string>

    <string name="plus">+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>