<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPage"
    android:background="@drawable/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/side_margin600"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/side_margin600"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/direct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="@dimen/side_margin600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/direct_icon"
            tools:srcCompat="@drawable/direct_icon"
            tools:ignore="ContentDescription"  />
        <Button
            android:id="@+id/message"
            android:layout_width="50dp"
            android:layout_marginLeft="100dp"
            android:layout_height="50dp"
            android:background="#898989"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="리스트 버튼"/>

        <ImageView
            android:id="@+id/edit_pofile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/side_margin600"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_icon"
            tools:srcCompat="@drawable/user_icon"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/linear_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin600"
                android:text="이름"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nickname_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textColor="@color/white"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/now_doing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/profile_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_nickname"
            app:layout_constraintVertical_bias="0.04">

            <EditText
                android:id="@+id/I_doing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin600"
                android:textColor="@color/white"
                android:text="@string/default_doing"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ing"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <!-- 이거 저장버튼으로 써 -->
            <ImageView
                android:id="@+id/edit_doing"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/edit_icon" />

        </LinearLayout>

        <!--
        <ImageView
            android:id="@+id/profile_circle"
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40"
            app:srcCompat="@drawable/emotion1" />
        -->

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin600"
            android:layout_marginRight="@dimen/side_margin600"
            android:background="@drawable/login_edittext_style"
            android:padding="18dp"
            android:paddingStart="25dp"
            android:paddingLeft="20dp"
            android:text="상태메세지"
            android:textColor="@color/colorMain"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/now_doing"
            app:layout_constraintVertical_bias="0.04"
            tools:ignore="MissingConstraints,RtlSymmetry,SpUsage" />

        <com.hitomi.cmlibrary.CircleMenu
            android:id="@+id/profile_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:scaleX="3.5"
            android:scaleY="3.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />


        <ImageView
            android:id="@+id/showColor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_circle"
            app:layout_constraintEnd_toEndOf="@+id/profile_circle"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="@+id/profile_circle"
            app:layout_constraintTop_toTopOf="@+id/profile_circle"
            app:layout_constraintVertical_bias="0.94"
            app:srcCompat="@drawable/busy_1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin600"
            android:layout_marginTop="200dp"
            android:text="@string/busy"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_circle"
            tools:ignore="SpUsage" />

        <com.google.android.material.slider.Slider
            android:id="@+id/busy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/side_margin600"
            android:layout_marginLeft="@dimen/side_margin600"
            android:stepSize="1"
            android:value="1.0"
            android:valueFrom="0"
            android:valueTo="2"
            app:haloColor="@color/colorControlHighlight"
            app:labelBehavior="gone"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.4"
            app:thumbColor="@color/white"
            app:thumbRadius="@dimen/l_text"
            app:tickColor="@color/white"
            app:trackColorActive="@color/colorPrimary"
            app:trackColorInactive="@color/w_gray"
            app:trackHeight="25dp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin600"
            android:layout_marginRight="@dimen/side_margin600"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/busy"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busy_1"
                android:textColor="@color/gray"
                android:textSize="@dimen/s_text600"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busy_2"
                android:textColor="@color/gray"
                android:textSize="@dimen/s_text600"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busy_3"
                android:textColor="@color/gray"
                android:textSize="@dimen/s_text600"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>